--- a/app/views/nurseries/about.html.erb
+++ b/app/views/nurseries/about.html.erb
@@ -2,7 +2,7 @@
 <div class="img-area">
 	<div class="about-img"></div>
 	<div class="about-text">
-		<h1 class="h1 about-h1">保活（保育園探し）をちょっと楽にするためのサイト</h1>
+		<h1 class="h1 about-h1">保活をちょっと楽にするためのサイト</h1>
 		<h1 class="h1 about-h1-2">『With You』</h1>
 	</div>
 </div>
