--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,4 @@
-<!-- スマホ画面用 -->
+<!-- スマホ画面用 ----------------------------------------------------------------------------------------------------------------->
 
 <header class="header-nn">
     <div class="n-box">
@@ -100,7 +100,7 @@
 
 
 
-<!-- タブレット画面用 -->
+<!-- タブレット画面用 ------------------------------------------------------------------------------------------------------>
 <header class="header-n">
 
     <div class="n-box">
@@ -195,7 +195,7 @@
 
 
 
-<!-- PC画面用 -->
+<!-- PC画面用 ----------------------------------------------------------------------------------------------------->
 <header class="header">
   <div class="welcome">
     <p class="welcome-p">
@@ -211,7 +211,7 @@
   <div class="header-content row">
 
     <%= link_to root_path do %>
-    <div class="h-box col-md-2">
+    <div class="h-box col-md-3">
       <div class="logo-box">
         <p class="header-logo">WithYou</p>
       </div>
@@ -227,7 +227,7 @@
       <% end %>
     </div>
 
-    <div class="h-box nav-box col-md-5">
+    <div class="h-box nav-box col-md-4">
 
     <% if  user_signed_in? %>
 
