--- a/app/views/nurseries/index.html.erb
+++ b/app/views/nurseries/index.html.erb
@@ -31,11 +31,12 @@
               </div>
             <% end %>
           <% end %>
+          <%= paginate @nurseries, class: "pagenate" %>
         </div>
       </div>
     </div>
   </div>
-</div>
+
 
 <script type="text/javascript">
 let map;
