サイト名変更

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -103,10 +103,10 @@ button{
   text-align:right;
 }
 .header-logo{
-  color:#d6ebff;
+  color:#9AB1B7;
   // line-height:60px;
   font-size:25px;
-  font-weight:600;
+  // font-weight:600;
   // margin: 0;
   // padding: 0;
 }
