--- a/app/views/nurseries/about.html.erb
+++ b/app/views/nurseries/about.html.erb
@@ -2,8 +2,8 @@
 <div class="img-area">
 	<div class="about-img"></div>
 	<div class="about-text">
-		<h1 class="h1 about-h1">保活をちょっと楽にするためのサイト</h1>
-		<h1 class="h1 about-h1-2">『With You』</h1>
+		<h1 class="h1 about-h1">保活のサイト</h1>
+		<h1 class="h1 about-h1-2">『Mochi mochi』</h1>
 	</div>
 </div>
 
