--- a/app/views/shared/_header2.html.erb
+++ b/app/views/shared/_header2.html.erb
@@ -4,7 +4,7 @@
     <div class="n-box">
       <div class="logo-box">
         <%= link_to root_path do %>
-        <p class="header-logo">WithYou</p>
+        <p class="header-logo">Mochi mochi</p>
         <% end %>
       </div>
     </div>
@@ -82,7 +82,7 @@
     <div class="n-box">
       <div class="logo-box">
         <%= link_to root_path do %>
-        <p class="header-logo">WithYou</p>
+        <p class="header-logo">Mochi mochi</p>
         <% end %>
       </div>
     </div>
@@ -166,7 +166,7 @@
     <%= link_to root_path do %>
     <div class="h-box col-md-2">
       <div class="logo-box">
-        <p class="header-logo">WithYou</p>
+        <p class="header-logo">Mochi mochi</p>
       </div>
     </div>
 
