--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,7 +4,7 @@
     <div class="n-box">
       <div class="logo-box">
         <%= link_to root_path do %>
-        <p class="header-logo">WithYou</p>
+        <p class="header-logo">Mochi mochi</p>
         <% end %>
       </div>
       <div class="welcome">
@@ -106,7 +106,7 @@
     <div class="n-box">
       <div class="logo-box">
         <%= link_to root_path do %>
-        <p class="header-logo">WithYou</p>
+        <p class="header-logo">Mochi mochi</p>
         <% end %>
       </div>
       <div class="welcome">
@@ -213,7 +213,7 @@
     <%= link_to root_path do %>
     <div class="h-box col-md-3">
       <div class="logo-box">
-        <p class="header-logo">WithYou</p>
+        <p class="header-logo">Mochi mochi</p>
       </div>
     </div>
     <% end %>
