デザイン大幅改修

--- a/app/views/nurseries/about.html.erb
+++ b/app/views/nurseries/about.html.erb
@@ -1,17 +1,13 @@
 <%= render 'shared/header', search: @search %>
 <div class="img-area">
-	<div class="about-img"></div>
-	<div class="about-text">
-		<h1 class="h1 about-h1">保活のサイト</h1>
-		<h1 class="h1 about-h1-2">『Mochi mochi』</h1>
-	</div>
+	
 </div>
-
 <div class="body-content">
+	<div class="about-img"></div>
 	<div class="container-fluid">
     	<div class="row">
     		<div class="list-head">
-				<h2 class="h2">『With You』でできること</h2>
+				<h2 class="h2"></h2>
 			</div>
 			<div class="about-box"><p class="about-box-p h3">1.保育園の位置をマップで確認</p><div class="about-img1"></div></div>
 			<div class="about-box"><p class="about-box-p h3">2.自宅からの距離と移動時間(徒歩)を表示</p><div class="about-img2"></div></div>
