--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,13 +1,13 @@
 <footer>
-  <div class="footer-wrapper container-fluid">
-    <div class="footer-content row">
-      <div class="footer-box col-md-3 col-sm-12">
-        <%= link_to "home", root_path, class: "footer-item" %>
-        <%= link_to "about", about_path, class: "footer-item" %>
-      </div>
-      <div class="footerimg col-md-9 col-sm-12"></div>
-
+  <div class="footer-top">
+    <div class="footer-content clearfix">
+      <%= link_to "home", root_path, class: "footer-item" %>
+      <%= link_to "about", about_path, class: "footer-item" %>
     </div>
+  </div>
+  <div class="footer-bottom footer-content">
+    <div class="footerimg"></div>
     <p class="copyright">©mizuki-saito.</p>
   </div>
+
 </footer>
