--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -49,10 +49,21 @@ button{
   background-color: #fff;
   border-style: none;
 }
+#map {
+  height: 600px;
+  width: 100%;
+}
+#map2 {
+  height: 400px;
+  width: 100%;
+}
 .clearfix::after{
   content:"";
   display: block;
   clear: both;
+}
+.h1{
+  font-size:20px;
 }
 .h2{
   font-size:18px;
@@ -74,7 +85,7 @@ button{
 /*header----------------------------------------------------*/
 .header{
   width:100%;
-  height:100px;
+  height:150px;
   background-color:#fff;
   z-index:5;
   box-shadow: 0px 9px 7px -7px rgba(0,0,0,0.1);
@@ -91,24 +102,28 @@ button{
 }
 .header-content{
   width:1080px;
+  height:120px;
   margin:0 auto;
   // padding-top:15px;
 }
 .welcome{
   font-weight:600;
   width:100%;
+  height:20px;
+  padding:0;
+  margin:0;
 }
 .welcome-p{
   color:#acbfc6;
   text-align:right;
 }
 .header-logo{
-  color:#9AB1B7;
-  // line-height:60px;
-  font-size:25px;
-  // font-weight:600;
-  // margin: 0;
-  // padding: 0;
+  background-image:image-url('logo.png');
+  background-size:cover;
+  height:120px;
+  width:251px;
+  padding:0;
+  margin:0;
 }
 
 .list{
@@ -228,14 +243,18 @@ button{
   background-color: #f7f7f7;
   border-radius:20px 20px 0 0;
 }
-.mypage-a{
-  color:#9AB1B7;
-  width:150px;
-  margin:0 auto;
-  line-height:15px;
-  margin-top:10px;
+.mypage-a1::after{
+  content:'マイリスト';
+  font-weight:400;
 }
-
+.mypage-a2::after{
+  content:'スポット登録・編集';
+  font-weight:400;
+}
+.mypage-a3::after{
+  content:'ログアウト';
+  font-weight:400;
+}
 .welcome{
 
 }
@@ -268,7 +287,7 @@ button{
   padding:0 10px;
   display:block;
   float:left;
-  background:#7fbfff;
+  background:#6e8b96;
   color:#fff;
   border:none;
   font-size:20px;
@@ -284,7 +303,9 @@ color:#7fbfff;
   position: absolute;
   left:350px;
   top: 14px;
+  color:#fff;
 }
+
 /*メインの幅---------------------------------------*/
 .body-content{
   width:1080px;
@@ -299,44 +320,55 @@ color:#7fbfff;
 }
 
 /*footer--------------------------------------------*/
-.footer-wrapper{
-  background-color:#218F9B;
-  margin-top:20px;
-  height:400px;
+.footer-top{
+  background-color:#eaeaea;
+  margin-top:50px;
+  height:100px;
+  width:100%;
+}
+.footer-bottom{
+  background-color:#fff;
+  height:200px;
   width:100%;
 }
 .footer-content{
   width:1080px;
   margin:0 auto;
 }
-.footer-box{
-  margin-top:10px;
-}
 .footer-item{
-  display:block;
-  color:#fff;
-  border:dashed 1px #fff;
-  padding:10px;
+  float:left;
+  color:#546e7a;
+  border:dashed 1px #546e7a;
+  padding:10px 50px;
   text-align:center;
   margin:20px;
   font-weight:600;
 }
+.footerimg{
+  display:none;
+  background-image: image-url('logo.png');
+  background-size:cover;
+  height:120px;
+  width:250px;
+  float:right;
+}
 
 .footer-item:hover{
-  color:#218f9b;
+  color:#546e7a;
 }
 .copyright{
+  float:left;
   // color:#fff;
   // margin-top:200px;
 }
-.footerimg{
-  background-image: image-url('footerimg.png');
-  background-size: contain;
-  background-repeat: no-repeat;
-  width:550px;
-  height:400px;
-  margin:0 auto;
-}
+// .footerimg{
+//   background-image: image-url('footerimg.png');
+//   background-size: contain;
+//   background-repeat: no-repeat;
+//   width:550px;
+//   height:400px;
+//   margin:0 auto;
+// }
 
 /*サイトバー----------------------------------------------------------*/
 // .sidebar-box{
@@ -351,41 +383,22 @@ color:#7fbfff;
 //   display:block;
 // }
 /*アバウト--------------------------------------------*/
-.img-area{
-  position:relative;
-}
-.about-text{
-  position:absolute;
-  top:40%;
-  width:100%;
-  height:70px;
-  text-align:center;
-  color:#fff;
-  font-family:'SimSun','serif','ＭＳ 明朝';
-  text-shadow: 2px  2px 5px #f95f92,
-            -2px  2px 5px #f95f92,
-             2px -2px 5px #f95f92,
-            -2px -2px 5px #f95f92;
-}
-.about-h1{
-  text-align:center;
-  font-size:30px;
-  font-weight:600;
+// .img-area{
+
+  // width:100%;
+  // height:500px;
+// }
+.about-img{
+  background-image: image-url('aboutimg.png');
+  background-size:cover;
+  height:110px;
+  width:410px;
+  margin:0 auto;
+  margin-top:100px;
+  margin-bottom:100px;
 }
 
-.about-h1-2{
-  text-align:center;
-  font-size:30px;
-  font-weight:600;
-}
-.about-img{
-  background-image: image-url('');
-  background-size: cover;
-  background-position:0 -300px;
-  background-repeat: no-repeat;
-  width:100%;
-  height:400px;
-}
+
 .about-box{
   width:100%;
   margin:0 auto;
@@ -395,58 +408,6 @@ color:#7fbfff;
 .about-box-p{
   text-align:center;
 }
-// .about-img1{
-//   background-image: url(about-1.png);
-//   background-size: cover;
-//   background-position: center;
-//   width:100%;
-//   height:600px;
-// }
-// .about-img2{
-//   background-image: url(about-2.png);
-//   background-size: cover;
-//   background-position: center;
-//   width:100%;
-//   height:600px;
-// }
-// .about-img3{
-//   background-image: url(about-3.png);
-//   background-size: cover;
-//   background-position: center;
-//   width:100%;
-//   height:600px;
-// }
-
-// .about-img4{
-//   background-image: url(about-4.png);
-//   background-size: cover;
-//   background-position: center;
-//   width:100%;
-//   height:600px;
-// }
-
-// .about-img5{
-//   background-image: url(about-5.png);
-//   background-size: cover;
-//   background-position: center;
-//   width:100%;
-//   height:600px;
-// }
-// .about-img6{
-//   background-image: url(about-6.png);
-//   background-size: cover;
-//   background-position: center;
-//   width:100%;
-//   height:600px;
-// }
-
-// .about-img7{
-//   background-image: url(about-7.png);
-//   background-size: cover;
-//   background-position: center;
-//   width:100%;
-//   height:600px;
-// }
 
 /*メインコンテンツ--------------------------------------------*/
 .nursery-area{
@@ -461,10 +422,7 @@ color:#7fbfff;
 .nursery-area-list{
   padding:10px 0;
 }
-#map {
-        height: 600px;
-        width: 100%;
-      }
+
 
 // カテゴリー選択ボタン
 .category{
@@ -501,20 +459,20 @@ color:#7fbfff;
   margin:20px;
 }
 /*保育園詳細------------------------------------*/
-.show-header{
-  height:100px;
-  position:relative;
-}
-.show-header:after {
-content: "";
-position: absolute;
-left: 0;
-bottom: -7px;
-width: 100%;
-height: 10px;
-background: -webkit-repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #fff 4px);
-background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #fff 4px);
-}
+// .show-header{
+//   height:100px;
+//   position:relative;
+// }
+// .show-header:after {
+// content: "";
+// position: absolute;
+// left: 0;
+// bottom: -7px;
+// width: 100%;
+// height: 10px;
+// background: -webkit-repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #fff 4px);
+// background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #fff 4px);
+// }
 .s{
   position:relative;
 }
@@ -550,11 +508,11 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
 }
 .addlist{
   display:block;
-  float:right;
-  margin-right:20px;
+  // float:right;
+  // margin-right:20px;
   font-size:25px;
   color:#5EE1EF;
-  margin-top:60px;
+  // margin-top:60px;
 }
 .addlist::after{
   content:'マイリストに追加';
@@ -563,11 +521,11 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
 }
 .addlist2{
   display:block;
-  float:right;
-  margin-right:20px;
+  // float:right;
+  // margin-right:20px;
   font-size:25px;
   color:#f95f92;
-  margin-top:60px;
+  // margin-top:60px;
 }
 .addlist2::after{
   content:'マイリストに追加済み';
@@ -577,56 +535,50 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
 .addlist2::hover{
   color:#f95f92;
 }
-.cate-logo{
-  padding: 0.2em 0.5em;
-  margin: 0 10px;
-  margin-top:15px;
-  background: #ffeaea;
-  box-shadow: 0px 0px 0px 5px #ffeaea;
-  border: dashed 2px #ffc3c3;
-  border-radius: 50%;
-  width:70px;
-  height:70px;
-}
-.cate{
-  margin: 0;
-  padding: 0;
-  text-align:center;
-  line-height: 60px;
-}
-.f{
-  float:left;
-}
 
-.show-main{
-  margin-top:40px;
-}
-.main-img{
-  height:300px;
-/*  margin:0 auto;*/
-}
-.head-p{
-  line-height:15px;
-}
+
+
+// .show-main{
+//   margin-top:40px;
+// }
+
+// .head-p{
+//   line-height:15px;
+// }
 .show-head-n{
   display:none;
 }
-.concept-detail{
-  margin-top:10px;
-  font-size:15px;
-  padding:5px 10px 5px 15px;
-  border-left:solid 5px #FFD731;
+// .concept-detail{
+//   margin-top:10px;
+//   font-size:15px;
+//   padding:5px 10px 5px 15px;
+//   border-left:solid 5px #FFD731;
+// }
+// .map-area{
+//   margin:10px 0;
+// }
+.nursery-box{
+  width:90%;
+  padding:20px;
+  margin:20px;
+  background-color:#fffc9c;
+  border-radius:100px;
 }
-.map-area{
-  margin:10px 0;
+.nursery-box-left{
+  background-color:#ffdbc7;
+}
+.nursery-box-right-h4{
+  margin-left:30px;
 }
 .tell-box{
-  margin:0 auto;
-  height:50px;
-  width:250px;
-  background-color:#FFFC9C;
+  // margin:0 auto;
+  // height:50px;
+  // width:250px;
+  // background-color:#FFFC9C;
   text-align:center;
-  border-radius:10px;
+  margin:10px 0;
+
+  // border-radius:10px;
 }
 .tell{
   margin-top:15px;
@@ -636,41 +588,48 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
 .tell:hover{
   color:#ACBFC6;
 }
-.box{
-  margin:30px 0;
-}
-.box-table{
-  line-height:25px;
-  width:250px;
-  margin:0 auto;
-}
-.center-text{
-  text-align:center;
-}
-.ohana{
-  background-image:image-url('ohana.png');
-  background-size:15%;
-  background-repeat: no-repeat;
-  background-position: 60% 0;
-}
-.date-box{
-}
-.date-list{
-  list-style-type: none;
-}
-.date-item{
-  margin:0 10px;
-  float:left;
-}
-.price-box{
-  width:250px;
-  margin:0 auto;
-}
-.price-h4{
-  padding-bottom:10px;
-}
+// .box{
+//   margin:30px 0;
+// }
+// .box-table{
+//   line-height:25px;
+//   width:250px;
+//   margin:0 auto;
+// // }
+// .center-text{
+//   text-align:center;
+// }
+// .ohana{
+//   background-image:image-url('ohana.png');
+//   background-size:15%;
+//   background-repeat: no-repeat;
+//   background-position: 60% 0;
+// }
+// .date-box{
+// }
+// .date-list{
+//   list-style-type: none;
+// }
+// .date-item{
+//   margin:0 10px;
+//   float:left;
+// }
+// .price-box{
+//   // width:250px;
+//   margin:0 auto;
+// }
+// .price-h4{
+//   padding-bottom:10px;
+// }
 .price-th{
-  width:25%;
+  width:10%;
+}
+
+.memo-form-show{
+  width:100%;
+  height:300px;
+  padding: 0.5em 1em;
+  border: double 5px #4ec4d3;
 }
 
 // 保育園新規追加・編集
@@ -767,7 +726,7 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
 .user-box-m{
   width:500px;
   margin:0 auto;
-  background-color:#ffdce1;
+  background-color:#ffdbc7;
   border-radius:100px;
   padding:5px 0;
   padding-top:50px;
@@ -899,17 +858,10 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
   width:100%;
 }
 .footerimg{
-  width:60%;
-  height:300px;
+  // width:60%;
+  // height:300px;
 }
-.about-img{
-  background-image: image-url('');
-  background-size: cover;
-  background-position:0 -300px;
-  background-repeat: no-repeat;
-  width:100%;
-  height:600px;
-}
+
 .addlist{
   margin-top:30px;
 }
@@ -947,11 +899,16 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
 }
 
 .header-logo{
-  color:#fff;
+  background-image:image-url('logomini.png');
+  background-size:cover;
+  height:25px;
+  width:130px;
+  padding:0;
+  margin:0;
 }
 .logo-box{
   padding: 0.2em 0.5em;
-  background: #d6ebff;
+  background: #9bdce0;
   margin: 0em 0;
 }
 .n-nav{
@@ -967,15 +924,6 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
   margin:0 auto;
   margin-top:20px;
 }
-// .sbox{
-//   height: 40px;
-// }
-// .sbox-2{
-//   height: 40px;
-// }
-// .sbtn{
-//   height: 40px;
-// }
 .mushimegane{
   left:340px;
   top: 15px;
@@ -1029,47 +977,12 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
 .show-head-n{
   display:block;
 }
-// .addlist{
-//   margin-right:0px;
-//   font-size:25px;
-//   color:#5EE1EF;
-//   margin-top:0px;
-// }
-// .addlist::after{
-//   content:'マイリストに追加';
-//   font-size:15px;
-//   font-weight:600;
-// }
-// .addlist2{
-//   display:block;
-//   float:right;
-//   margin-right:20px;
-//   font-size:20px;
-//   color:#f95f92;
-//   margin-top:0px;
-// }
-// .addlist2::after{
-//   content:'マイリストに追加済み';
-//   font-size:15px;
-//   font-weight:600;
-// }
-// .addlist2::hover{
-//   color:#f95f92;
-// }
+
 .footer-content{
   width:100%;
 }
 .footerimg{
-  width:60%;
-  height:300px;
-}
-.about-img{
-  background-image: image-url('about2.png');
-  background-size: cover;
-  background-position:0 -300px;
-  background-repeat: no-repeat;
-  width:100%;
-  height:800px;
+  display:block;
 }
 
 }
@@ -1079,6 +992,10 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
   #map{
     margin-top:20px;
   }
+
+.nursery-area{
+  display:none;
+}
 .header-n{
   display:none;
 }
@@ -1166,15 +1083,12 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
   border-radius:25px;
   display:block;
 }
+
 .sbtn{
-  height: 30px;
+  height:30px;
   width:80px;
-  padding:0 10px;
   float:none;
-  background:#7fbfff;
-  border:none;
   border-radius:25px;
-  font-size:20px;
   width:150px;
   margin:0 auto;
 }
@@ -1213,15 +1127,19 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
   font-size:15px;
 }
 .footerimg{
-  width:100%;
-  height:300px;
+  // width:100%;
+  // height:300px;
+}
+.footer-item{
+  padding:10px 10px;
 }
 .about-img{
-  background-image: image-url('');
-  background-size: cover;
-  background-position:0 -300px;
-  background-repeat: no-repeat;
-  width:100%;
-  height:800px;
+  // background-image: image-url('aboutimg.png');
+  // background-size:cover;
+  height:88px;
+  width:320px;
+  margin:0 auto;
+  margin-top:100px;
+  margin-bottom:50px;
 }
 }
