--- a/app/views/nurseries/index.html.erb
+++ b/app/views/nurseries/index.html.erb
@@ -31,7 +31,7 @@
               </div>
             <% end %>
           <% end %>
-          <%= paginate @nurseries, class: "pagenate" %>
+          <!-- # %= paginate @nurseries, class: "pagenate" % -->
         </div>
       </div>
     </div>
