--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -559,16 +559,26 @@ color:#7fbfff;
 // }
 .nursery-box{
   width:90%;
-  padding:20px;
-  margin:20px;
+  padding:30px;
+  margin:10px auto;
   background-color:#fffc9c;
   border-radius:100px;
 }
-.nursery-box-left{
+.nursery-box-left1{
   background-color:#ffdbc7;
+  border-radius:150px;
+  padding-top:50px;
+  padding-bottom:50px;
+}
+.nursery-box-left2{
+  background-color:#ccfff3;
+  padding:40px;
 }
 .nursery-box-right-h4{
-  margin-left:30px;
+  text-align:center;
+}
+.nursery-show-p{
+  text-align:center;
 }
 .tell-box{
   // margin:0 auto;
@@ -576,14 +586,14 @@ color:#7fbfff;
   // width:250px;
   // background-color:#FFFC9C;
   text-align:center;
-  margin:10px 0;
+  // margin:10px 0;
 
   // border-radius:10px;
 }
 .tell{
-  margin-top:15px;
+  // margin-top:15px;
   font-size:20px;
-  font-weight:600;
+  font-weight:400;
 }
 .tell:hover{
   color:#ACBFC6;
@@ -624,14 +634,26 @@ color:#7fbfff;
 .price-th{
   width:10%;
 }
-
+// .memoimg{
+//   background-image:image-url('memoimg.png');
+//   background-size:cover;
+//   height:670px;
+//   width:1080px;
+// }
+.memo{
+  text-align:center;
+}
 .memo-form-show{
   width:100%;
   height:300px;
   padding: 0.5em 1em;
-  border: double 5px #4ec4d3;
+  border: solid 1px #acbfc6;
+  border-radius:20px;
 }
-
+.memo-btn{
+  margin-top:10px;
+  text-align:center;
+}
 // 保育園新規追加・編集
 .n-form{
   margin-top:50px;
